# PICA

./: .gitignore  README.md  config.example.json  opencode.json  requirements.txt
.opencode/: instructions.md
docs/: architecture.md  design-analysis.md  interaction-design.md
pica/: __main__.py  ai_processor.py  archiver.py  config.py  database.py  grouping.py  process.py  recognizer.py  scanner.py  scanner_worker.py  thumbnail.py  utils.py  watcher.py  worker.py
pica/web/: app.py  routes_archive.py  routes_audit.py  routes_boxes.py  routes_browse.py  routes_categories.py  routes_groups.py  routes_pending.py  routes_recycle.py  routes_scan.py  routes_settings.py  routes_stats.py  routes_tags.py  routes_thumbnail.py
pica/web/templates/: _box_tray.html  _content.html  _details.html  _group_items.html  _lg-icons.html  _list.html  _masonry.html  _md-icons.html  _sm-icons.html  _tiles.html  _xl-icons.html  archive.html  audit.html  base.html  box_detail.html  boxes.html  categories.html  detail.html  group_detail.html  groups.html  pending.html  recycle.html  scan.html  settings.html  stats.html  tags.html
scripts/: init_db.py  start.ps1  tauri-build.ps1  tauri-dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/webview/: index.html
tests/: test_archiver.py  test_database.py  test_recognizer.py  test_scanner.py  test_utils.py
